@@ -97,7 +97,7 @@ ENH_I18N			XOPEN	SC 1 FSUW
 EQUIV_CLASS_MAX			C	QQ 1 L
 EXEC_INTERPRETER_LENGTH		C	QQ 1 L
 EXPR_NEST_MAX			POSIX	SC 2 LMN	32
-FCHR_MAX			SVID	SC 1 LMU	LONG_MAX 2147483647
+FCHR_MAX			SVID	SC 1 LMU	SSIZE_MAX 2147483647
 FILESIZEBITS			POSIX	PC 1 LMU	(8*sizeof(off_t)) 32
 FILE_LOCKING			POSIX	SC 1 FU
 FORT_DEV			POSIX	SC 2 CFUW
